@@ -1,3 +1,8 @@
+Wed Mar 23 16:16:38 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* python/tests/Makefile.am python/tests/flood4.py: one more flooding
+	  handling regression test.
+
 Wed Mar 23 11:59:20 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_poll.c: make 100% sure we will not use kernel monitoring
